--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "opdracht-c-fight-club",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.3",
+    "bourbon": "~4.1.1"
   }
 }
